Windows exe's generated by jpackage have wrong info

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • internal
    • Affects Version/s: internal
    • Component/s: tools

      From user feedback on EA2:

      I'm using jpackage EA from https://jdk.java.net/jpackage/ to create a
      windows executable on windows 2012 R2 (jpackager create-image ...)
      The resulting exe file doesn't have the correct vendor and version
      information (it has openjdk 13 instead of my vendor name and version).
      It has the correct logo.

      I can see the same thing with simple application after JDK-8217317 moved the version-swap functionality to a native library.

            Assignee:
            Alexander Matveev
            Reporter:
            Andy Herrick (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: