8218681: Windows exe's generated by jpackage have wrong info

Submitten-by: almatvee

Reviewed-by: herrick